--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -11,36 +11,58 @@
 
   <script>
     const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+    const p = document.querySelector('p');
 
     function makeGreen() {
-      const p = document.querySelector('p');
       p.style.color = '#BADA55';
       p.style.fontSize = '50px';
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('Hello I am a %s string!', 'poo')
 
     // Styled
+    console.log('%cI am a great text', 'font-size: 16px; background: red;')
 
     // warning!
+    console.warn('Oh noo!');
 
     // Error :|
+    console.error('Shit!');
 
     // Info
+    console.info('Info :)');
 
     // Testing
+    console.assert(1 !== 1, 'That is wrong!');
 
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    console.dir(p);
 
     // Grouping together
+    dogs.forEach( dog => {
+      console.group(dog.name) // also works with .groupCollapsed
+      console.log(dog.age)
+      console.groupEnd(dog.name)
+    })
 
     // counting
+    console.count('Wes');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/webos')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      })
 
   </script>
 </body>
