--- a/21 - Geolocation/index-START.html
+++ b/21 - Geolocation/index-START.html
@@ -63,7 +63,7 @@
     const arrow = document.querySelector('.arrow');
     const speed =  document.querySelector('.speed-value');
 
-    navigator.geolocation.watchPosition((date) => {
+    navigator.geolocation.watchPosition((data) => {
       console.log(data);
       speed.textContent = data.coords.speed;
       arrow.style.transform = `rotate(${data.coords.heading}deg)`;
